# airtable_python_tools_alpha

./: .gitignore  LICENSE  README.md  TODO.md  add_complex_fields.py  add_demo_data.py  check_ids.py  cli_helpers.py  main.py  package-lock.json  package.json  pyproject.toml  pytest.ini  run_regression_tests.py  tailwind.config.js  test_and_debug.py  test_cli_commands.py  test_comparison_debug.py  test_field_ids.py  test_field_ref_debug.py  test_formula_compressor.py  test_formula_evaluator_engine.py  test_formula_grapher.py  test_partial_evaluation.py  test_partial_evaluation_examples.py  test_regex.py  test_table_bug.py  test_table_bug_extended.py  tsconfig.json  web_regression_tests.py
.github/: copilot-instructions.md
docs/: ai-testing-guide.md  architecture.md  code-generator-design.md  formula-evaluator-incremental-README.md  formula-evaluator-incremental-design.md  formula-runtime-design.md  formula-runtime-phase1-complete.md  formula-runtime-phase2-complete.md  formula-runtime-phase3-complete.md  formula-runtime-phase4-complete.md  formula-runtime-phase5-complete.md  integration-testing-guide.md  performance-improvements-summary.md  performance-testing-quick-ref.md  phase1-complete.md  phase2-complete.md  phase3-complete.md  phase4-incremental-complete.md  phase5-complete.md  phase5b-debugging-guide.md  phase5b-incremental-parity-plan.md  phase5b-progress-summary.md  postgres-generated-columns-limitations.md  test-fixes-phase3.md  testing-guide.md  typescript-migration-plan.md  web-testing-guide.md
scripts/: README.md  __init__.py  generate_pyscript_config.py
(+125 files in other folders)
