[project]
name = "airtable-mermaid-grapher"
version = "0.2.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # "funcparserlib>=1.0.1",
    "httpx>=0.28.1",
    # "matplotlib>=3.10.3",
    "networkx>=3.6.1",
    # "pyqt6>=6.9.0",
    "pyscript>=0.3.3",
    "python-dotenv>=1.2.1",
    "typer>=0.9.0",
]
