[project]
name = "airtable-mermaid-grapher"
version = "0.3.2"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "networkx>=3.6.1",
    "pyscript>=0.3.3",
    "python-dotenv>=1.2.1",
    "tomli-w>=1.1.0",
    "typer>=0.9.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
    "pytest-asyncio>=0.24.0",
]

